# install-snopt-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  environment.yaml  example_1.cpp  example_2.cpp  main.cpp  test.conf
